--- a/.github/workflows/push-to-template.yml
+++ b/.github/workflows/push-to-template.yml
@@ -2,7 +2,7 @@ name: Push to template repository
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -25,20 +25,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
+          node-version: "lts/*"
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run:  npm run build
+        run: npm run build
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source-directory: 'dist'
-          destination-github-username: 'h5bp'
-          destination-repository-name: 'html5-boilerplate-template'
-          user-name: 'roblarsen'
+          source-directory: "dist"
+          destination-github-username: "h5bp"
+          destination-repository-name: "html5-boilerplate-template"
+          user-name: "roblarsen"
           user-email: rob@htmlcssjavascript.com
           commit-message: "The latest and greatest from HTML5 Boilerplate"
-
