--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html5-boilerplate",
-  "version": "9.0.0-RC1",
+  "version": "9.0.0",
   "homepage": "https://html5boilerplate.com/",
   "license": "MIT",
   "description": "A professional front-end template for building fast, robust, and adaptable web apps or sites.",
