--- a/src/package.json
+++ b/src/package.json
@@ -11,10 +11,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open --config webpack.config.dev.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "lint": "eslint ./js --fix",
+    "build": "npm run lint && webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
