--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "test": "gulp archive && mocha --reporter spec --timeout 5000"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.35.0",
     "archiver": "^7.0.1",
     "del": "^8.0.0",
     "eslint": "^9.35.0",
-    "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-mocha": "^11.1.0",
     "glob": "^11.0.3",
+    "globals": "^16.3.0",
     "gulp": "^5.0.1",
     "gulp-autoprefixer": "^9.0.0",
     "gulp-eslint": "^6.0.0",
