--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "test": "gulp archive && mocha --reporter spec --timeout 5000"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.35.0",
     "archiver": "^7.0.1",
     "del": "^8.0.0",
@@ -39,13 +38,12 @@
     "globals": "^16.3.0",
     "gulp": "^5.0.1",
     "gulp-autoprefixer": "^9.0.0",
-    "gulp-eslint": "^6.0.0",
+    "gulp-eslint-new": "^2.4.0",
     "gulp-header": "^2.0.9",
     "gulp-rename": "^2.1.0",
     "main.css": "3.0.0",
     "mocha": "^11.7.2",
-    "prettier": "3.6.2",
-    "strip-json-comments": "^5.0.3"
+    "prettier": "3.6.2"
   },
   "engines": {
     "node": ">=20"
